--- a/src/db.properties
+++ b/src/db.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://8.130.43.75:3308/dorm?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-jdbc.username=root
-jdbc.password=123456
+jdbc.url=jdbc:mysql://**:**/dorm?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+jdbc.username=**
+jdbc.password=**
 jdbc.maxTotal=30
 jdbc.maxIdle=10
 jdbc.initialSize=5
